scaler-kubernetes-webhook.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webhook
  labels:
    namespace-label: webhook
