githubrunner.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-runner
  namespace: apps
  labels:
    app: github-runner
spec:
  selector:
    matchLabels:
      app: github-runner
  template:
    metadata:
      labels:
        app: github-runner
    spec:
      containers:
        - image: self-hosted-github-action-runner:local
          imagePullPolicy: IfNotPresent
          name: github-runner
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
      restartPolicy: Always
