scaler-kubernetes-webhook.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scaler-kubernetes-webhook
  namespace: webhook
spec:
  selector:
    matchLabels:
      app: scaler-kubernetes-webhook
  template:
    metadata:
      labels:
        app: scaler-kubernetes-webhook
    spec:
      containers:
        - image: keda-goclient:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 3443
          name: keda-goclient
          volumeMounts:
            - name: tls
              mountPath: "/etc/admission-webhook/tls"
          # resources:
          #   limits:
          #     cpu: 500Mi
          #     memory: 1Gi
      volumes:
        - name: tls
          secret:
            secretName: scaler-kubernetes-webhook-tls
