scaler-kubernetes-webhook.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scaler-kubernetes-webhook
  namespace: webhook
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 3443
  selector:
    app: scaler-kubernetes-webhook
