scaler-kubernetes-webhook.admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "scaler-kubernetes-webhook.acme.com"
webhooks:
  - name: "scaler-kubernetes-webhook.acme.com"
    # Avoid chicken-egg problem with our webhook deployment.
    objectSelector:
      matchExpressions:
      - key: app
        operator: NotIn
        # This is the label 'app' of the Webhook deployment.yaml
        # eg. app: scaler-kubernetes-webhook
        values: ["scaler-kubernetes-webhook"]    
    rules:
      - apiGroups:   ["keda.sh"]
        apiVersions: ["v1", "v1alpha1"]
        operations:  ["CREATE"]
        resources:   ["scaledjobs", "scaledobjects"]
        scope:       "*"
    clientConfig:
      service:
        namespace: webhook
        name: scaler-kubernetes-webhook
        path: /validate-pods
        port: 443
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURRekNDQWl1Z0F3SUJBZ0lVWllYaFFRdzVO
[...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 2
