scaler-kubernetes-webhook.mutating.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: "scaler-kubernetes-webhook.acme.com"
webhooks:
  - name: "scaler-kubernetes-webhook.acme.com"
    # Avoid chicken-egg problem with our webhook deployment.
    objectSelector:
      matchExpressions:
      - key: app
        operator: NotIn
        values: ["scaler-kubernetes-webhook"]    
    rules:
      - apiGroups:   [""]
        apiVersions: ["v1"]
        operations:  ["CREATE"]
        resources:   ["pods"]
        scope:       "*"
    clientConfig:
      service:
        namespace: webhook
        name: scaler-kubernetes-webhook
        path: /mutate-pods
        port: 443
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURRekNDQWl1Z0F3SUJBZ0lVWllYaFFRdzVO
[...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 2
